Added support for launching multimc